# ugent-wechat-proxy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: outbound-media-upload-plan.md
src/: broker.rs  config.rs  crypto.rs  lib.rs  main.rs  media_cache.rs  outbound.rs  types.rs  webhook.rs  wechat_api.rs  wecom_api.rs  wecom_webhook.rs  ws_manager.rs
src/storage/: mod.rs  models.rs  sqlite.rs
